[gd_scene load_steps=14 format=3 uid="uid://diq1m6b8dbkts"]

[ext_resource type="Texture2D" uid="uid://lbo5ywx06662" path="res://pnlsim_board.png" id="1_77oa0"]
[ext_resource type="Script" path="res://scripts/server.gd" id="1_gicwe"]
[ext_resource type="Texture2D" uid="uid://cw0jjtykb227" path="res://resources/dice/d1.png" id="2_5lb6x"]
[ext_resource type="Texture2D" uid="uid://pct0rtk2wkjx" path="res://resources/dice/d2.png" id="3_kajnb"]
[ext_resource type="Script" path="res://scripts/game_controller.gd" id="4_8r5b8"]
[ext_resource type="Texture2D" uid="uid://c4nwcccf6vxb7" path="res://resources/squares/saul.png" id="4_vgsjd"]
[ext_resource type="AudioStream" uid="uid://bv2sjgypqplyb" path="res://resources/squares/videos/saul_intro.mp3" id="5_4noi5"]

[sub_resource type="Theme" id="Theme_xa2on"]
default_font_size = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cqxk"]
bg_color = Color(0.955963, 0.955963, 0.955963, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lxjx2"]
bg_color = Color(0.717647, 0, 0, 1)
corner_detail = 1

[sub_resource type="SystemFont" id="SystemFont_1qwrg"]
font_names = PackedStringArray("Cursive")
font_italic = true
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_lvbyf"]
default_font = SubResource("SystemFont_1qwrg")
default_font_size = 16

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jj1ib"]
albedo_texture = ExtResource("1_77oa0")

[node name="server" type="Node3D"]
script = ExtResource("1_gicwe")

[node name="control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="control"]
visible = false
layout_mode = 0
offset_right = 260.0
offset_bottom = 540.0

[node name="menu" type="Control" parent="control/Panel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="labels" type="Control" parent="control/Panel/menu"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="name_label" type="RichTextLabel" parent="control/Panel/menu/labels"]
layout_mode = 0
offset_left = 90.0
offset_top = 54.0
offset_right = 170.0
offset_bottom = 94.0
text = "NAME
"
metadata/_edit_use_anchors_ = true

[node name="name" type="TextEdit" parent="control/Panel/menu/labels"]
layout_mode = 0
offset_left = 67.0
offset_top = 90.0
offset_right = 187.0
offset_bottom = 140.0
placeholder_text = "name..."
metadata/_edit_use_anchors_ = true

[node name="add_label" type="RichTextLabel" parent="control/Panel/menu/labels"]
layout_mode = 0
offset_left = 87.0
offset_top = 166.0
offset_right = 167.0
offset_bottom = 206.0
text = "ADDRESS"
metadata/_edit_use_anchors_ = true

[node name="address" type="TextEdit" parent="control/Panel/menu/labels"]
layout_mode = 0
offset_left = 64.0
offset_top = 202.0
offset_right = 184.0
offset_bottom = 252.0
text = "LOCALHOST"
placeholder_text = "address..."
metadata/_edit_use_anchors_ = true

[node name="port_label" type="RichTextLabel" parent="control/Panel/menu/labels"]
layout_mode = 0
offset_left = 95.0
offset_top = 271.0
offset_right = 175.0
offset_bottom = 311.0
text = "PORT"
metadata/_edit_use_anchors_ = true

[node name="port" type="TextEdit" parent="control/Panel/menu/labels"]
layout_mode = 0
offset_left = 66.0
offset_top = 313.0
offset_right = 186.0
offset_bottom = 363.0
text = "3342"
placeholder_text = "port..."
metadata/_edit_use_anchors_ = true

[node name="buttons" type="Control" parent="control/Panel/menu"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="join" type="Button" parent="control/Panel/menu/buttons"]
layout_mode = 0
offset_left = 88.0
offset_top = 385.0
offset_right = 172.0
offset_bottom = 416.0
text = "CONNECT"
metadata/_edit_use_anchors_ = true

[node name="host" type="Button" parent="control/Panel/menu/buttons"]
layout_mode = 0
offset_left = 106.0
offset_top = 437.0
offset_right = 157.0
offset_bottom = 468.0
text = "HOST"
metadata/_edit_use_anchors_ = true

[node name="host2" type="Button" parent="control/Panel/menu/buttons"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.3
anchor_bottom = 1.3
offset_left = 106.0
offset_top = 437.0
offset_right = 157.0
offset_bottom = 468.0
text = "ttt"
metadata/_edit_use_anchors_ = true

[node name="lobby" type="Control" parent="control"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="control/lobby"]
layout_mode = 0
offset_left = 390.0
offset_top = 224.0
offset_right = 590.0
offset_bottom = 264.0
scale = Vector2(1.656, 1.656)
text = "WAITING FOR PLAYERS"

[node name="start" type="Button" parent="control/lobby"]
layout_mode = 0
offset_left = 504.0
offset_top = 379.0
offset_right = 560.0
offset_bottom = 410.0
text = "START"

[node name="game_ui" type="Control" parent="control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="navbar" type="Panel" parent="control/game_ui"]
layout_mode = 0
offset_right = 1180.0
offset_bottom = 80.0

[node name="dirty" type="Control" parent="control/game_ui/navbar"]
layout_mode = 3
anchors_preset = 0
offset_left = 38.0
offset_right = 78.0
offset_bottom = 40.0

[node name="name" type="RichTextLabel" parent="control/game_ui/navbar/dirty"]
layout_mode = 0
offset_left = -1.0
offset_right = 119.0
offset_bottom = 40.0
text = "dirty money"

[node name="data" type="RichTextLabel" parent="control/game_ui/navbar/dirty"]
layout_mode = 0
offset_top = 30.0
offset_right = 80.0
offset_bottom = 70.0
text = "$300"

[node name="clean" type="Control" parent="control/game_ui/navbar"]
layout_mode = 3
anchors_preset = 0
offset_left = 174.0
offset_right = 214.0
offset_bottom = 40.0

[node name="name" type="RichTextLabel" parent="control/game_ui/navbar/clean"]
layout_mode = 0
offset_left = -1.0
offset_right = 119.0
offset_bottom = 40.0
text = "clean money"

[node name="data" type="RichTextLabel" parent="control/game_ui/navbar/clean"]
layout_mode = 0
offset_top = 30.0
offset_right = 80.0
offset_bottom = 70.0
text = "$$0"

[node name="ients-clit" type="Control" parent="control/game_ui/navbar"]
anchors_preset = 0
offset_left = 329.0
offset_right = 369.0
offset_bottom = 40.0

[node name="name" type="RichTextLabel" parent="control/game_ui/navbar/ients-clit"]
layout_mode = 0
offset_left = -1.0
offset_right = 79.0
offset_bottom = 40.0
text = "ients-clit"

[node name="data" type="RichTextLabel" parent="control/game_ui/navbar/ients-clit"]
layout_mode = 0
offset_top = 30.0
offset_right = 80.0
offset_bottom = 70.0
text = "30k"

[node name="firearms" type="Control" parent="control/game_ui/navbar"]
layout_mode = 3
anchors_preset = 0
offset_left = 482.0
offset_right = 522.0
offset_bottom = 40.0

[node name="name" type="RichTextLabel" parent="control/game_ui/navbar/firearms"]
layout_mode = 0
offset_left = -1.0
offset_right = 79.0
offset_bottom = 40.0
text = "firearms"

[node name="data" type="RichTextLabel" parent="control/game_ui/navbar/firearms"]
layout_mode = 0
offset_top = 30.0
offset_right = 80.0
offset_bottom = 70.0
text = "30k"

[node name="weed" type="Control" parent="control/game_ui/navbar"]
layout_mode = 3
anchors_preset = 0
offset_left = 621.0
offset_right = 661.0
offset_bottom = 40.0

[node name="name" type="RichTextLabel" parent="control/game_ui/navbar/weed"]
layout_mode = 0
offset_left = -1.0
offset_right = 79.0
offset_bottom = 40.0
text = "'euh"

[node name="data" type="RichTextLabel" parent="control/game_ui/navbar/weed"]
layout_mode = 0
offset_top = 30.0
offset_right = 80.0
offset_bottom = 70.0
text = "33.1 kg"

[node name="yayo" type="Control" parent="control/game_ui/navbar"]
layout_mode = 3
anchors_preset = 0
offset_left = 739.0
offset_right = 779.0
offset_bottom = 40.0

[node name="name" type="RichTextLabel" parent="control/game_ui/navbar/yayo"]
layout_mode = 0
offset_left = -1.0
offset_right = 79.0
offset_bottom = 40.0
text = "YAYO"

[node name="data" type="RichTextLabel" parent="control/game_ui/navbar/yayo"]
layout_mode = 0
offset_top = 30.0
offset_right = 80.0
offset_bottom = 70.0
text = "18 kg"

[node name="roll_panel" type="Panel" parent="control/game_ui"]
layout_mode = 0
offset_left = 1000.0
offset_top = 447.0
offset_right = 1120.0
offset_bottom = 567.0

[node name="D1" type="Sprite2D" parent="control/game_ui/roll_panel"]
position = Vector2(28.9998, 92.9999)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_5lb6x")

[node name="D2" type="Sprite2D" parent="control/game_ui/roll_panel"]
position = Vector2(88, 93)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_kajnb")

[node name="move" type="Button" parent="control/game_ui/roll_panel"]
layout_mode = 0
offset_left = 33.0
offset_top = -4.0
offset_right = 88.0
offset_bottom = 27.0
text = "MOVE"

[node name="roll" type="Button" parent="control/game_ui/roll_panel"]
layout_mode = 0
offset_left = 36.0
offset_top = 32.0
offset_right = 85.0
offset_bottom = 63.0
text = "ROLL"

[node name="howmuch" type="TextEdit" parent="control/game_ui/roll_panel"]
layout_mode = 0
offset_left = 27.0
offset_top = -89.0
offset_right = 87.0
offset_bottom = -19.0
placeholder_text = "roll..."

[node name="generate" type="Button" parent="control/game_ui/roll_panel"]
layout_mode = 0
offset_left = -64.0
offset_top = -40.0
offset_right = 14.0
offset_bottom = -9.0
text = "generate"

[node name="leaderboard" type="Panel" parent="control/game_ui"]
visible = false
layout_mode = 0
offset_left = 883.0
offset_top = 106.0
offset_right = 1133.0
offset_bottom = 146.0

[node name="gameplay_panel" type="Panel" parent="control/game_ui"]
self_modulate = Color(1, 1, 1, 0.152941)
layout_mode = 0
offset_top = 466.0
offset_right = 1200.0
offset_bottom = 666.0

[node name="land_button" type="Button" parent="control/game_ui/gameplay_panel"]
layout_mode = 0
offset_left = 369.0
offset_top = 54.0
offset_right = 649.0
offset_bottom = 111.0
theme = SubResource("Theme_xa2on")
text = "LAND NAME"

[node name="trade" type="Button" parent="control/game_ui/gameplay_panel"]
layout_mode = 0
offset_left = 482.0
offset_top = 129.0
offset_right = 541.0
offset_bottom = 160.0
text = "TRADE"

[node name="end_turn" type="Button" parent="control/game_ui/gameplay_panel"]
layout_mode = 0
offset_left = 1027.0
offset_top = 129.0
offset_right = 1117.0
offset_bottom = 160.0
text = "END TURN"

[node name="land_panel" type="Panel" parent="control/game_ui"]
layout_mode = 0
offset_left = 175.0
offset_top = 105.0
offset_right = 925.0
offset_bottom = 505.0

[node name="square" type="Panel" parent="control/game_ui/land_panel"]
layout_mode = 0
offset_left = 59.0
offset_top = 33.0
offset_right = 269.0
offset_bottom = 353.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7cqxk")

[node name="color" type="Panel" parent="control/game_ui/land_panel/square"]
layout_mode = 0
offset_right = 210.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lxjx2")

[node name="land_title" type="RichTextLabel" parent="control/game_ui/land_panel/square"]
layout_mode = 0
offset_top = 11.0
offset_right = 160.0
offset_bottom = 51.0
scale = Vector2(1.324, 1.324)
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
text = "[center]saul goodman"

[node name="Sprite2D" type="Sprite2D" parent="control/game_ui/land_panel"]
position = Vector2(164, 223)
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_vgsjd")
region_enabled = true
region_rect = Rect2(0, 0, 300, 374)

[node name="misc" type="Panel" parent="control/game_ui/land_panel"]
layout_mode = 0
offset_left = 307.0
offset_top = 33.0
offset_right = 707.0
offset_bottom = 383.0

[node name="land_vid" type="VideoStreamPlayer" parent="control/game_ui/land_panel/misc"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 280.0
expand = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="control/game_ui/land_panel/misc"]
stream = ExtResource("5_4noi5")
volume_db = 8.0

[node name="hbox" type="HBoxContainer" parent="control/game_ui/land_panel/misc"]
layout_mode = 0
offset_top = 280.0
offset_right = 400.0
offset_bottom = 350.0
theme_override_constants/separation = 16
alignment = 1

[node name="Button" type="Button" parent="control/game_ui/land_panel/misc/hbox"]
layout_mode = 2
text = "Contest"

[node name="Button2" type="Button" parent="control/game_ui/land_panel/misc/hbox"]
layout_mode = 2
text = "Purchase"

[node name="description_panel" type="Panel" parent="control/game_ui/land_panel/misc"]
visible = false
layout_mode = 0
offset_top = 1.0
offset_right = 400.0
offset_bottom = 351.0

[node name="description" type="RichTextLabel" parent="control/game_ui/land_panel/misc/description_panel"]
layout_mode = 0
offset_left = 52.0
offset_top = 27.0
offset_right = 352.0
offset_bottom = 147.0
text = "this land generates x ients-clit per turn
this land generates x ients-clit per turn"

[node name="interaction_panel" type="Panel" parent="control/game_ui/land_panel/misc"]
layout_mode = 0
offset_top = 1.0
offset_right = 400.0
offset_bottom = 281.0

[node name="exit" type="Button" parent="control/game_ui/land_panel"]
layout_mode = 0
offset_left = 718.0
offset_right = 748.0
offset_bottom = 31.0
text = "X"

[node name="information" type="Button" parent="control/game_ui/land_panel"]
layout_mode = 0
offset_left = 685.0
offset_right = 715.0
offset_bottom = 31.0
theme = SubResource("Theme_lvbyf")
text = "i"

[node name="gamescene" type="Node3D" parent="."]
script = ExtResource("4_8r5b8")

[node name="CSGBox3D" type="CSGBox3D" parent="gamescene"]
transform = Transform3D(-1.494, 0, 0, 0, -1.494, 0, 0, 0, -1.494, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_jj1ib")

[node name="Players" type="Node" parent="gamescene"]

[node name="CSGBox3D2" type="CSGBox3D" parent="gamescene"]
transform = Transform3D(0.016, 0, 0, 0, 0.08, 0, 0, 0, 0.016, -0.643904, 0.5, 0.645147)
size = Vector3(1, 0.002, 1)

[node name="Camera3D" type="Camera3D" parent="gamescene"]
transform = Transform3D(-4.04199e-08, 0.380699, -0.924699, 1.66409e-08, 0.924699, 0.380699, 1, 1.77636e-15, -4.37114e-08, -1.43244, 1.71854, 0.0639362)

[node name="OmniLight3D" type="OmniLight3D" parent="gamescene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.010273, 1.75918, 0)

[connection signal="pressed" from="control/Panel/menu/buttons/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="control/Panel/menu/buttons/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="control/Panel/menu/buttons/host2" to="." method="_on_host_2_pressed"]
[connection signal="pressed" from="control/lobby/start" to="gamescene" method="_on_start_pressed"]
[connection signal="pressed" from="control/game_ui/roll_panel/move" to="gamescene" method="_on_move_pressed"]
[connection signal="pressed" from="control/game_ui/roll_panel/roll" to="gamescene" method="_on_roll_pressed"]
[connection signal="pressed" from="control/game_ui/roll_panel/generate" to="gamescene" method="_on_generate_pressed"]
[connection signal="pressed" from="control/game_ui/gameplay_panel/land_button" to="gamescene" method="_on_land_button_pressed"]
[connection signal="pressed" from="control/game_ui/gameplay_panel/end_turn" to="gamescene" method="_on_end_turn_pressed"]
[connection signal="pressed" from="control/game_ui/land_panel/exit" to="gamescene" method="_on_exit_pressed"]
